adjustment the hall blog page
saperate the CSS files + adding images in assets folder + adding new post page

--- a/index.html
+++ b/index.html
@@ -9,4 +9,49 @@
        <h1>Blog Page</h1>
        <p>hosted with GitHub Pages.</p>
    </body> 
+</html><head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog HomePage</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Blog HomePage</h1>
+        <section class="blog-post-card">
+            <h2>Blog Post Title</h2>
+            <figure>
+                <img src="assets/image1.avif" alt="Blog Post Image">
+                <figcaption>An insightful blog post</figcaption>
+            </figure>
+            <p><strong>Lorem ipsum dolor sit amet</strong>, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada.</p>
+            <p><em>Lorem ipsum dolor sit amet</em>, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada.</p>
+            <p>Lorem ipsum dolor sit amet, <u>consectetur adipiscing elit</u>. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada.</p>
+            <a href="post1.html"><button>Read More</button></a>
+        </section>
+        <section class="blog-post-card">
+            <h2>Another Blog Post</h2>
+            <figure>
+                <img src="assets/image2.avif" alt="Blog Post Image">
+                <figcaption>Another great blog post</figcaption>
+            </figure>
+            <p><strong>Lorem ipsum dolor sit amet</strong>, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada.</p>
+            <p><em>Lorem ipsum dolor sit amet</em>, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada.</p>
+            <p>Lorem ipsum dolor sit amet, <u>consectetur adipiscing elit</u>. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada.</p>
+            <a href="post2.html"><button>Read More</button></a>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Blog Website</p>
+    </footer>
+</body>
 </html>
