--- a/post2.html
+++ b/post2.html
@@ -24,15 +24,15 @@
                     <img src="assets/image2.avif" alt="Blog Post Image">
                     <figcaption>Another great blog post image</figcaption>
                 </figure>
-                <p>Written by Author Name</p>
+                <p>Written by Daniel Baker</p>
             </header>
             <section class="author-info">
                 <div class="card">
                     <img src="assets/avatar.avif" alt="Avatar">
                     <div class="container">
-                        <h4><b>Author Name</b></h4>
-                        <p>Title at Current Company/School</p>
-                        <p>Short Bio about the author.</p>
+                        <h4><b>Daniel Baker</b></h4>
+                        <p>Web Developer</p>
+                        <p>Interactive Telecommunications Program expert.</p>
                     </div>
                 </div>
             </section>
